--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -135,7 +135,8 @@
                 <p class="title is-3 has-text-weight-bold has-text-centered">Oh no! Something broke.</p>
                 <p class="has-text-centered">We are unable to verify your email as the <b>verification link used is
                     invalid</b>.</p>
-                <p class="has-text-centered">If you require a new verification code, login into your account and click 'resend'.</p>
+                <p class="has-text-centered">If you require a new verification code, login into your account and click
+                    'resend'.</p>
                 <br>
                 <a onclick="$('#verificationFailedModal').fadeOut('fast');" class="button is-light is-fullwidth"><i
                         class="fas fa-times"></i>&ensp;Close</a>
