--- a/templates/customer/review.html
+++ b/templates/customer/review.html
@@ -28,7 +28,8 @@
                             </div>
                         </div>
                         <div class="column">
-                            <div class="box listing-img" style="background-image: url('/public/places/bishan.jpg');"></div>
+                            <div class="box listing-img"
+                                 style="background-image: url('/public/places/bishan.jpg');"></div>
                         </div>
                     </div>
 
@@ -41,14 +42,18 @@
                             <div class="field">
                                 <label class="label" for="review">Leave a review</label>
                                 <div class="control">
-                                    <textarea class="textarea" placeholder="What were some things you enjoyed about this experience? How can it be improved?" id="review" name="review"></textarea>
+                                    <textarea class="textarea"
+                                              placeholder="What were some things you enjoyed about this experience? How can it be improved?"
+                                              id="review" name="review"></textarea>
                                 </div>
                             </div>
 
                             <div class="field">
                                 <label class="label" for="review-submit"></label>
                                 <div class="control">
-                                    <button id="review-submit" name="review-submit" class="button is-success is-medium is-fullwidth">Submit your review</button>
+                                    <button id="review-submit" name="review-submit"
+                                            class="button is-success is-medium is-fullwidth">Submit your review
+                                    </button>
                                 </div>
                             </div>
                         </fieldset>
