--- a/templates/profile.html
+++ b/templates/profile.html
@@ -38,14 +38,15 @@
                     </div>
                     <div class="box is-centered">
                         <p class="title is-6"><strong>Description</strong></p>
-                        <p class="subtitle is-6 pb-4">I am a certified tour guide with fluent English and I specialise in
+                        <p class="subtitle is-6 pb-4">I am a certified tour guide with fluent English and I specialise
+                            in
                             food tours.</p>
 
                         <p class="title is-6"><strong>Languages</strong></p>
                         <p class="subtitle is-6">English</p>
                     </div>
                 {% else %}
-                    {{  super() }}
+                    {{ super() }}
                 {% endif %}
                 <div class="box is-centered">
                     <div class="profile-img-onprofile" style="background-image: url('/pfp.jpg');"></div>
