--- a/templates/base.html
+++ b/templates/base.html
@@ -3,24 +3,24 @@
 
 <head>
     {% block head %}
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tourisit - Tours by locals.</title>
-    <link rel="stylesheet" href="/css/frameworks/bulma.min.css">
-    <link rel="stylesheet" href="/css/global/navbar.css">
-    <link rel="stylesheet"
-        href="https://cdn.jsdelivr.net/npm/@creativebulma/bulma-tooltip@1.2.0/dist/bulma-tooltip.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
-        integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
-        crossorigin="anonymous" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
-        integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
-        crossorigin="anonymous"></script>
-    {#
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Tourisit - Tours by locals.</title>
+        <link rel="stylesheet" href="/css/frameworks/bulma.min.css">
+        <link rel="stylesheet" href="/css/global/navbar.css">
+        <link rel="stylesheet"
+              href="https://cdn.jsdelivr.net/npm/@creativebulma/bulma-tooltip@1.2.0/dist/bulma-tooltip.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+              integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
+              crossorigin="anonymous"/>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
+                integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
+                crossorigin="anonymous"></script>
+        {#
     <script src="https://cdnjs.cloudflare.com/ajax/libs/turbolinks/5.2.0/turbolinks.js" #} {#
         integrity="sha512-G3jAqT2eM4MMkLMyQR5YBhvN5/Da3IG6kqgYqU9zlIH4+2a+GuMdLb5Kpxy6ItMdCfgaKlo2XFhI0dHtMJjoRw==" #}
         {# crossorigin="anonymous"></script>#}
-    {#
+        {#
     <script>#}
         {#Turbolinks.start()# }
         {#</script>#}
@@ -31,7 +31,7 @@
 </head>
 
 <body>
-    {% block nav %}
+{% block nav %}
 
 
     <nav class="navbar is-fixed-top" role="navigation" aria-label="main navigation">
@@ -60,94 +60,95 @@
                 </div>
 
                 {% if loggedin %}
-                <div class="navbar-end">
-                    {% if user.account_mode == 1 %}
-                    <a class="navbar-item has-text-primary-dark" href="{{ url_for('sellerDashboard') }}">
-                        <i class="fas fa-arrow-right"></i>&ensp;Tour Guide mode
-                    </a>
-                    {% endif %}
-                    {% if user.account_type == 1 %}
-                    <a class="navbar-item has-text-danger" href="{{ url_for('adminDashboard') }}">
-                        <i class="fas fa-arrow-right"></i>&ensp;Admin mode
-                    </a>
-                    {% endif %}
-                    <a class="navbar-item has-tooltip-arrow has-tooltip-bottom" data-tooltip="Your Bookings"
-                        href="{{ url_for('all_bookings') }}">
-                        <i class="fas fa-bookmark"></i>
-                    </a>
-                    <a class="navbar-item has-tooltip-arrow has-tooltip-bottom" data-tooltip="Your Wishlist"
-                        href="{{ url_for('favourites') }}">
-                        <i class="fas fa-heart"></i>
-                    </a>
-                    <a class="navbar-item has-tooltip-arrow has-tooltip-bottom" data-tooltip="Your Inbox"
-                        href="{{ url_for('chat') }}">
-                        <i class="fas fa-comment-alt"></i>
-                    </a>
-                    <div class="navbar-item has-dropdown is-hoverable">
-                        <a class="navbar-item">
-                            <div class="profile-img" style="background-image: url('data:image/jpeg;base64, {{ user.profile_img }}');"></div>
+                    <div class="navbar-end">
+                        {% if user.account_mode == 1 %}
+                            <a class="navbar-item has-text-primary-dark" href="{{ url_for('sellerDashboard') }}">
+                                <i class="fas fa-arrow-right"></i>&ensp;Tour Guide mode
+                            </a>
+                        {% endif %}
+                        {% if user.account_type == 1 %}
+                            <a class="navbar-item has-text-danger" href="{{ url_for('adminDashboard') }}">
+                                <i class="fas fa-arrow-right"></i>&ensp;Admin mode
+                            </a>
+                        {% endif %}
+                        <a class="navbar-item has-tooltip-arrow has-tooltip-bottom" data-tooltip="Your Bookings"
+                           href="{{ url_for('all_bookings') }}">
+                            <i class="fas fa-bookmark"></i>
                         </a>
+                        <a class="navbar-item has-tooltip-arrow has-tooltip-bottom" data-tooltip="Your Wishlist"
+                           href="{{ url_for('favourites') }}">
+                            <i class="fas fa-heart"></i>
+                        </a>
+                        <a class="navbar-item has-tooltip-arrow has-tooltip-bottom" data-tooltip="Your Inbox"
+                           href="{{ url_for('chat') }}">
+                            <i class="fas fa-comment-alt"></i>
+                        </a>
+                        <div class="navbar-item has-dropdown is-hoverable">
+                            <a class="navbar-item">
+                                <div class="profile-img"
+                                     style="background-image: url('data:image/jpeg;base64, {{ user.profile_img }}');"></div>
+                            </a>
 
-                        <div class="navbar-dropdown is-boxed is-right">
-                            <div class="has-background-light p-4 mb-2 has-text-black">
-                                <p class="has-text-weight-bold">Logged in as</p>
-                                <p>{{ user.name }}</p>
+                            <div class="navbar-dropdown is-boxed is-right">
+                                <div class="has-background-light p-4 mb-2 has-text-black">
+                                    <p class="has-text-weight-bold">Logged in as</p>
+                                    <p>{{ user.name }}</p>
+                                </div>
+                                <a class="navbar-item" href="{{ url_for('profile') }}">
+                                    Your profile
+                                </a>
+                                <a class="navbar-item" href='{{ url_for("all_bookings") }}'>
+                                    Your bookings
+                                </a>
+                                <a class="navbar-item" href='{{ url_for("accountinfo") }}'>
+                                    Account settings
+                                </a>
+                                <hr class="navbar-divider">
+                                <a onclick="$('#logoutOptionsModal').fadeIn('fast')"
+                                   class="navbar-item has-text-danger-dark">
+                                    <i class="fas fa-sign-out-alt"></i>&ensp;Sign out
+                                </a>
                             </div>
-                            <a class="navbar-item" href="{{ url_for('profile') }}">
-                                Your profile
-                            </a>
-                            <a class="navbar-item" href='{{ url_for("all_bookings") }}'>
-                                Your bookings
-                            </a>
-                            <a class="navbar-item" href='{{ url_for("accountinfo") }}'>
-                                Account settings
-                            </a>
-                            <hr class="navbar-divider">
-                            <a onclick="$('#logoutOptionsModal').fadeIn('fast')"
-                                class="navbar-item has-text-danger-dark">
-                                <i class="fas fa-sign-out-alt"></i>&ensp;Sign out
-                            </a>
                         </div>
                     </div>
-                </div>
                 {% else %}
-                <div class="navbar-end">
-                    <div class="navbar-item">
-                        <div class="buttons">
-                            <a class="button is-info is-light" href='/signup'>
-                                <strong>Sign up</strong>
-                            </a>
-                            <a class="button is-light" href='/login'>
-                                Log in
-                            </a>
+                    <div class="navbar-end">
+                        <div class="navbar-item">
+                            <div class="buttons">
+                                <a class="button is-info is-light" href='/signup'>
+                                    <strong>Sign up</strong>
+                                </a>
+                                <a class="button is-light" href='/login'>
+                                    Log in
+                                </a>
+                            </div>
                         </div>
                     </div>
-                </div>
                 {% endif %}
             </div>
         </div>
     </nav>
 
-    {% endblock %}
+{% endblock %}
 
-    {% block content %}
-    {% endblock %}
+{% block content %}
+{% endblock %}
 
-    <div id="logoutOptionsModal" class="modal is-active" style="display: none;">
-        <div class="modal-background"></div>
-        <div class="modal-card box" style="padding: 3em;">
-            <p class="title is-3 has-text-weight-bold has-text-centered">See you soon!</p>
-            <p class="subtitle has-text-centered">Where would you like to logout from?</p>
-            <span class="buttons">
+<div id="logoutOptionsModal" class="modal is-active" style="display: none;">
+    <div class="modal-background"></div>
+    <div class="modal-card box" style="padding: 3em;">
+        <p class="title is-3 has-text-weight-bold has-text-centered">See you soon!</p>
+        <p class="subtitle has-text-centered">Where would you like to logout from?</p>
+        <span class="buttons">
                 <a href="{{ url_for('logout') }}" class="button is-danger is-fullwidth"><i
                         class="fas fa-desktop"></i>&ensp;Logout of this device only</a>
                 <a href="{{ url_for('logout', all=True) }}" class="button is-danger is-light is-fullwidth"><i
                         class="fas fa-laptop-house"></i>&ensp;Logout of all devices</a>
             </span>
-            <a onclick="$('#logoutOptionsModal').fadeOut('fast');" class="button is-light is-fullwidth"><i
-                    class="fas fa-times"></i>&ensp;Cancel</a>
-        </div>
+        <a onclick="$('#logoutOptionsModal').fadeOut('fast');" class="button is-light is-fullwidth"><i
+                class="fas fa-times"></i>&ensp;Cancel</a>
     </div>
+</div>
 </body>
 
 </html>
