--- a/templates/components/listing-card.html
+++ b/templates/components/listing-card.html
@@ -1,17 +1,20 @@
 {% for item in item_list %}
-<div class="column is-one-third">
-    <a class="listing-card-a pb-5" href="/discover/{{ item['_id'] }}">
-        <div class="box listing-card small p-6" style="background-image: url('data:image/jpeg;base64, {{item['tour_img']}}')">
-            <div class="listing-card-blur"></div>
-            <div class="listing-author">
-                <div class="profile-img" style="background-image: url('data:image/jpeg;base64, {{item['tg_uid']|user_pfp}}')">
+    <div class="column is-one-third">
+        <a class="listing-card-a pb-5" href="/discover/{{ item['_id'] }}">
+            <div class="box listing-card small p-6"
+                 style="background-image: url('data:image/jpeg;base64, {{ item['tour_img'] }}')">
+                <div class="listing-card-blur"></div>
+                <div class="listing-author">
+                    <div class="profile-img"
+                         style="background-image: url('data:image/jpeg;base64, {{ item['tg_uid']|user_pfp }}')">
+                    </div>
+                    <div class="ml-2 has-text-light"><b>{{ item['tg_uid']|user_name }}</b> <span>is offering:</span>
+                    </div>
                 </div>
-                <div class="ml-2 has-text-light"><b>{{ item['tg_uid']|user_name }}</b> <span>is offering:</span></div>
+                <div class="m-2">
+                    <h1 class='title is-4 has-text-white'>{{ item["tour_name"] }}</h1>
+                </div>
             </div>
-            <div class="m-2">
-                <h1 class='title is-4 has-text-white'>{{ item["tour_name"] }}</h1>
-            </div>
-        </div>
-    </a>
-</div>
+        </a>
+    </div>
 {% endfor %}
