--- a/templates/customer/allBookings.html
+++ b/templates/customer/allBookings.html
@@ -29,12 +29,14 @@
                         <p class="subtitle">Upcoming Tours</p>
                         <table class='table is-striped is-fullwidth'>
                             {% for item in booking_list %}
-                              {% if item.process_step == 6 %}
-                                <tr>
-                                    <td>{{item.book_date}}</td>
-                                    <td><a href="/s/bookings/{{ item['_id'] }}">{{listings[loop.index0].tour_name}}</a></td>
-                                </tr>
-                              {% endif %}
+                                {% if item.process_step == 6 %}
+                                    <tr>
+                                        <td>{{ item.book_date }}</td>
+                                        <td>
+                                            <a href="/s/bookings/{{ item['_id'] }}">{{ listings[loop.index0].tour_name }}</a>
+                                        </td>
+                                    </tr>
+                                {% endif %}
                             {% endfor %}
                         </table>
                     </div>
@@ -42,23 +44,23 @@
                         <p class="subtitle">Required Action</p>
                         <table class='table is-striped is-fullwidth'>
                             {% for item in booking_list %}
-                            {% if item.process_step in (1, 3, 5, 6, 7) %}
-                            <tr>
-                                <td><b>{{listings[loop.index0].tour_name}}</b></td>
-                                {% if item.process_step == 1 %}
-                                <td><a href="">Submit Requirements</a></td>
-                                {% elif item.process_step == 3 %}
-                                <td><a href="">Review Custom Itinerary & Charges</a></td>
-                                {% elif item.process_step == 5 %}
-                                <td><a href="">Make Payment</a></td>
-                                {% elif item.process_step == 6 %}
-                                <td><a href="">Complete Tour</a></td>
-                                {% elif item.process_step == 7 %}
-                                <td><a href="">Leave Feedback</a></td>
+                                {% if item.process_step in (1, 3, 5, 6, 7) %}
+                                    <tr>
+                                        <td><b>{{ listings[loop.index0].tour_name }}</b></td>
+                                        {% if item.process_step == 1 %}
+                                            <td><a href="">Submit Requirements</a></td>
+                                        {% elif item.process_step == 3 %}
+                                            <td><a href="">Review Custom Itinerary & Charges</a></td>
+                                        {% elif item.process_step == 5 %}
+                                            <td><a href="">Make Payment</a></td>
+                                        {% elif item.process_step == 6 %}
+                                            <td><a href="">Complete Tour</a></td>
+                                        {% elif item.process_step == 7 %}
+                                            <td><a href="">Leave Feedback</a></td>
+                                        {% endif %}
+                                    </tr>
                                 {% endif %}
-                            </tr>                            
-                            {% endif %}
-                          {% endfor %}
+                            {% endfor %}
                         </table>
                     </div>
                 </div>
@@ -83,72 +85,77 @@
     <!--END: Dropdown-->
     <section>
         {% if booking_list == None %}
-        <div>bro you no bookings lmao, go book some you sad, sad man.</div>
+            <div>bro you no bookings lmao, go book some you sad, sad man.</div>
         {% else %}
             {% for item in booking_list %}
-            {% set listing = listings[loop.index0] %}
-        <!--START: Card -->
-        <div class='container mt-5'>
-            <div class='box p-5'>
-                <a href="/bookings/{{ item['_id'] }}">
-                    <div class="columns is-vcentered">
-                        <div class="column">
-                            <div class="ml-4">
-                                {% if item.process_step <= 4 %}
-                                <span class="tag is-info is-light mb-4">Planning</span>
-                                {% elif 4 < item.process_step < 7 %}
-                                <span class="tag is-success is-light mb-4">Confirmed</span>
-                                {% elif item.process_step >= 7 %}
-                                <span class="tag is-warning is-light mb-4">Completed</span>
-                                {% endif %}
-                                <div class="listing-author">
-                                    <div class="profile-img" style="background-image: url('data:image/jpeg;base64, {{listing.tg_img}}')">
+                {% set listing = listings[loop.index0] %}
+                <!--START: Card -->
+                <div class='container mt-5'>
+                    <div class='box p-5'>
+                        <a href="/bookings/{{ item['_id'] }}">
+                            <div class="columns is-vcentered">
+                                <div class="column">
+                                    <div class="ml-4">
+                                        {% if item.process_step <= 4 %}
+                                            <span class="tag is-info is-light mb-4">Planning</span>
+                                        {% elif 4 < item.process_step < 7 %}
+                                            <span class="tag is-success is-light mb-4">Confirmed</span>
+                                        {% elif item.process_step >= 7 %}
+                                            <span class="tag is-warning is-light mb-4">Completed</span>
+                                        {% endif %}
+                                        <div class="listing-author">
+                                            <div class="profile-img"
+                                                 style="background-image: url('data:image/jpeg;base64, {{ listing.tg_img }}')">
+                                            </div>
+                                            <div class="ml-2"><b>{{ listing.tg_name }}</b> <span>is offering:</span>
+                                            </div>
+                                        </div>
+                                        <h1 class='title'>{{ listing.tour_name }}</h1>
+                                        <p class="subtitle truncate is-size-6 has-text-grey">{{ listing.tour_desc }}</p>
                                     </div>
-                                    <div class="ml-2"><b>{{ listing.tg_name }}</b> <span>is offering:</span></div>
                                 </div>
-                                <h1 class='title'>{{listing.tour_name}}</h1>
-                                <p class="subtitle truncate is-size-6 has-text-grey">{{listing.tour_desc}}</p>
+                                <div class="column is-two-fifths">
+                                    <div class="box listing-img"
+                                         style="background-image: url('data:image/jpeg;base64, {{ listing.tour_img }}');"></div>
+                                </div>
                             </div>
-                        </div>
-                        <div class="column is-two-fifths">
-                            <div class="box listing-img" style="background-image: url('data:image/jpeg;base64, {{ listing.tour_img }}');"></div>
-                        </div>
+                        </a>
                     </div>
-                </a>
-            </div>
-        </div>
-        <!--END: Card-->
+                </div>
+                <!--END: Card-->
             {% endfor %}
         {% endif %}
     </section>
 
-<!--START: Scroll to top button-->
-<button onclick="topFunction()" id="TopBtn" title="Go to top">
-    <i class="fas fa-chevron-up"></i>
-</button>
-<!--END: Scroll to top button-->
+    <!--START: Scroll to top button-->
+    <button onclick="topFunction()" id="TopBtn" title="Go to top">
+        <i class="fas fa-chevron-up"></i>
+    </button>
+    <!--END: Scroll to top button-->
 
-<!--Scroll to top button's js-->
+    <!--Scroll to top button's js-->
     <script>
         //Get the button:
-    mybutton = document.getElementById("TopBtn");
+        mybutton = document.getElementById("TopBtn");
 
-    // When the user scrolls down 20px from the top of the document, show the button
-    window.onscroll = function() {scrollFunction()};
+        // When the user scrolls down 20px from the top of the document, show the button
+        window.onscroll = function () {
+            scrollFunction()
+        };
 
-    function scrollFunction() {
-    if (document.body.scrollTop > 1200 || document.documentElement.scrollTop > 1200) {
-        mybutton.style.display = "block";
-    } else {
-        mybutton.style.display = "none";
-    }
-    }
+        function scrollFunction() {
+            if (document.body.scrollTop > 1200 || document.documentElement.scrollTop > 1200) {
+                mybutton.style.display = "block";
+            } else {
+                mybutton.style.display = "none";
+            }
+        }
 
-    // When the user clicks on the button, scroll to the top of the document
-    function topFunction() {
-    document.body.scrollTop = 0; // For Safari
-    document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
-    }
+        // When the user clicks on the button, scroll to the top of the document
+        function topFunction() {
+            document.body.scrollTop = 0; // For Safari
+            document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
+        }
     </script>
 
 {% endblock %}
